# packagingtutorial

./: pyproject.toml
src/exmaple_package_JAZMYNW.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
