[project]
name = "exaple_package_JAZMYNW"
version = "0.0.1"
authors = [
    { name = "Jazmyn Walker", email = "jazmynw@bu.edu"}
]
description = "A small example package"
readme = "README.md"
requires-python =  ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/jazmynw/tutorialproject"

